plugins {
    id 'java'
}

group = 'canoestudios.crafttweakervisualeditor'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {

}

test {
    useJUnitPlatform()
}

// 可选：配置编译选项
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    // 额外的Java编译参数（根据需要添加）
    options.compilerArgs += [
            '--enable-preview', // 如果需要使用预览特性
            '-Xlint:unchecked',
            '-Xlint:deprecation'
    ]
}